Added titles to demos

--- a/demos/clone/index.html
+++ b/demos/clone/index.html
@@ -19,6 +19,9 @@
     -->
   <title>Clone solution template</title>
   <style>
+  html {
+    font-family: Arial;
+  }
   .section {
     margin: 8px 0 8px 0;
     border: 1px solid gray;
@@ -47,6 +50,7 @@
   </style>
 </head>
 <body>
+  <h3>Clone solution template</h3>
   <div id="page" style="display:none">
 
     <div class="section">
